[tool.poetry]
name = "logstore"
version = "0.1.0"
description = "Utilities for logging to SQLite"
authors = ["Takashi Sasaki <takashi316@gmail.com>"]
homepage = "https://x.com/TakashiSasaki"
license = "MIT"
readme = "README.md"

packages = [
    { include = "logstore", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
